<resources>
    <string name="app_name">Blank_Education</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_main_education">教学</string>
    <string name="button_main_me">我的</string>
    <string name="button_main_life">生活</string>
    <string name="life_title">生活</string>
    <string name="me_title">我的</string>
    <string name="educate_title">教学</string>
    <string name="login_text">请登录</string>
    <string name="list_question">问题反馈</string>
    <string name="list_about">关于我们</string>
    <string name="list_delete">注销用户</string>
    <string name="content_circut">电路报修</string>
    <string name="content_lamp">灯具报修</string>
    <string name="pipe_content">水管报修</string>
    <string name="door_content">门窗报修</string>
    <string name="content_else">其他报修</string>
    <string name="click_here_regist">点击此处注册</string>
    <string name="please_insert_pwd">请输入密码</string>
    <string name="please_insert_username">请输入用户名</string>
    <string name="login_sucess">登陆成功</string>
    <string name="login_failed">登陆失败</string>
    <string name="please_check_pwd">请查对密码</string>
    <string name="please_insert_stunum">请输入学号</string>
    <string name="content_uncomplete">内容未填写完整</string>
    <string name="unmatch_pwd">密码不正确</string>
    <string name="wrong_stu_num">学号不正确</string>
    <string name="regist_success">注册成功</string>
    <string name="button_login">登陆</string>
    <string name="double_click_back">再按一次退出</string>
    <string name="upload_sucess">上传成功</string>
    <string name="Complete">完成</string>
    <string name="Error">错误</string>
    <string name="upload_head">上传头像</string>
    <string name="upload_failed">上传失败</string>
    <string name="load_failed">加载失败</string>
    <string name="no_more">没有更多了</string>
    <string name="listfooterview_normal">查看更多</string>
    <string name="listfooterview_ready">松开载入更多</string>
    <string name="upload">上传</string>
    <string name="upload_content_text">请输入内容</string>
    <string name="upload_title_text">请输入标题</string>
    <string name="please_login">请先登录</string>
    <string name="watch_it">特别关注</string>
    <string name="heartsayings_title_text">心里话</string>
    <string name="history_text_1">1985年10月19日刘少奇视察我校</string>
    <string name="history_text_2">1960年5月11日董必武视察我校</string>
    <string name="history_text_3">1960年6月27日朱德视察我校</string>
    <string name="history_text_4">1960年7月23日邓小平视察我校</string>
    <string name="history_text_5">1960年10月我校被指定为重点大学</string>
    <string name="history_text_6">1961年11月4日陈毅视察我校</string>
    <string name="history_text_7">我校屯溪路校区原食堂遗址</string>
    <string name="history_text_8">1961年11月4日陈毅为我校师生作形势报告</string>
    <string name="history_text_9">董必武参观我校科技成果展览馆</string>
    <string name="history_text_10">这是1959年时的东教学楼</string>
    <string name="history_text_11">1958年10月19日刘少奇视察我校</string>
    <string name="history_text_12">1960年7月23日邓小平视察我校</string>
    <string name="name_di">第</string>
    <string name="name_ye">页</string>
</resources>
