<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.liang.paul.intelligent.HeadUploadActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:id="@+id/img_head_upload"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp" />

    <com.dd.CircularProgressButton
        android:id="@+id/btn_head_upload"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:cpb_textComplete="@string/Complete"
        app:cpb_textError="@string/Error"
        app:cpb_textIdle="@string/upload_head"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
