<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cn.liang.paul.intelligent.LoginActivity">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:hint="@string/please_insert_username"
        android:id="@+id/txt_user_name"
        android:layout_marginTop="157dp"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txt_password"
        android:layout_alignStart="@+id/txt_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/please_insert_pwd"
        android:id="@+id/txt_password"
        android:layout_below="@+id/txt_user_name"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="196dp"
        android:layout_height="64dp"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:text="@string/button_login"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txt_password" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/click_here_regist"
        android:id="@+id/txt_login_regist"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
